# codewar-solution.rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: continuous-integration.yml  rust.yml
katas/kyu7/: Cargo.toml
katas/kyu8/: Cargo.toml
src/: lib.rs
