[package]
name = "codewars"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[profile.test]
opt-level = 1
[profile.test.package."*"]
opt-level = 3

[dependencies]
bit-set = "0"
chrono = "0"
either = "1"
fancy-regex = "0"
futures = "0"
im = "15"
itertools = "0"
lazy_static = "1"
num = { version = "0", features = ["rand"] }
once_cell = "1"
rand = "0"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
text_io = "0"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0", features = ["full"] }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
float_eq = "1"
